Version 1.4.2
=============

* added a fast inverse of a diagonal matrix function common.inv_diagonal()

* added ability to order Q matrix by dimension or derivative with the helper 
functions

* mahalanobis, log-likelihood, and likelihood only computed when requested;
`compute_log_likelihood` attribute removed.

* fix for bug where attributes not saved. GitHub #136

* Many minor typos in docstring and comments fixes

* Added saving of posterior state to classes

* Added exception to IMM if filter bank dimensions do not agree. GitHub #141

* Added Mahalanobis distance to classes that didn't support it

* added flatten() to saver as an convienent way to flatten column vectors
so they will display nicely in the REPL.

* Partially removed dependence on Matplotlib. Matplotlib is only imported
by functions that use plotting. Github #148

* Removed ability to pass in single matrix to batch_filter functions/methods.
Github #147. In general it is impossible to tell if you have a list of matrices,
or an single array, depending on the shape of the arrays and the size of the
input. Rather than try and obscurely fail, make the user pass the correctly
dimensioned data in.


Version 1.4.1
=============


* GitHub 125: used itertools.repeat() instead of [x]*n to get
iterable list of constant values

* Fixed bug using [:] to copy data instead of np.copy(), which is
a deep copy

* fixed import bug in common.kinematic_kf()


Version 1.4
===========

* UKF refactor. This is a (mildly) breaking change. Passing data to
h(x) and f(x) is now done by kwargs, not tuples. The sigma point
classes now have attributes Wm and Wc, and weights() was deleted.

I also fixed a bug that did not provide a default value for `kappa`
for the JulierSigmaPoints class.

Version 1.3.2
=============

Fixed build error in Python 2.7 due to using print function without importing
it from future.

Added filterpy.common.Saver class, which can save all the attribute of any