@@ -19,4 +19,5 @@ linux-64/
 osx-64/
 filterpy/kalman/i.py
 filterpy/inprogress.py
+.pytest_cache
 
